<package format="3">
  <name>iot_c2d_receiver</name>
  <version>0.1.0</version>
  <description>ROS 2 node that receives Azure IoT Hub C2D messages and stores waypoint YAMLs.</description>

  <maintainer email="ziyli@example.com">ORobotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <!-- Azure IoT SDK for Python. Depending on your platform, rosdep key may be python3-azure-iot-device or you may need to pip install. -->
  <exec_depend>python3-azure-iot-device</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
